--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
 
 html,
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
     /* Verhindert jegliches Scrollen */
     font-size: 16px;
