--- a/style.css
+++ b/style.css
@@ -1,24 +1,16 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    zoom: 0;
-}
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: monospace;
 
-html,
-body {
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
-    /* Verhindert jegliches Scrollen */
-    font-size: 16px;
-    /* Setzt die Schriftgröße zurück */
-}
+        }
 
-body {
-    display: flex;
-    flex-direction: column;
-}
+    body{
+
+        background-color: var(--primary-color);
+        font-size: 3.5rem;
+    }
 
 :root {
     --primary-color: #ffffff;
